# pkuhub_developer_tutorial

./: .gitignore  2讲稿.md  globals.typ  readme.md  产品需求文档 (PRD) AI代码重构与讲解工具.md
First-lecture/: main.typ  速查表.md
First-lecture/sections/: 1.typ  2.typ  4.typ  _template.typ
Fourth-lecture/: global-top.vue  pnpm-lock.yaml
Second-lecture/: package.json  style.css
Second-lecture/components/: AppleCard.vue  AppleHero.vue  ContentContainer.vue  FeatureCard.vue
Second-lecture/layouts/: center.vue  ending-layout.vue  explanation-layout.vue  intro.vue  toc-layout.vue  two-cols.vue
lecture1-3-4-6/sections/: 1.typ  3.typ  learn.typ
lecture2/: .gitignore  README.md  slides.config.ts  vite.config.ts
lecture2-new/: .gitignore  main.typ  pkuhub-theme.typ
lecture2/components/: AppleButton.vue  AppleFeatureGrid.vue  Counter.vue  SplitView.vue
lecture2/layouts/: cover-layout.vue  cover.vue  custom-split.vue  image-right.vue  section.vue  statement.vue
lecture2/styles/: index.css
lecture5/: README.md  package.json  slides.md  style.css
lecture7/: main.typ
lecture7/images/: coding_new.png.bak
lecture7/sections/: 7.typ  7_script.typ
lecture8/: main.typ
lecture8/sections/: 8.typ
rust-examples/: Cargo.toml
rust-examples/src/: 01_data_declaration.rs  02_control_flow.rs  03_code_organization.rs  04_syntactic_sugar.rs  main.rs
sections/: 0.typ  1.typ  2.typ  _template.typ
speech_notes/: speech1.typ  speech5.typ  产品需求文档 (PRD) AI代码重构与讲解工具.md
